--- a/CollectionViewSample/ColerSample/ColorSampleView.storyboard
+++ b/CollectionViewSample/ColerSample/ColorSampleView.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,8 +16,65 @@
                     <view key="view" contentMode="scaleToFill" id="jfM-a8-Ltl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kPk-C8-m1p">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kqc-RQ-qoB">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorSampleCell" id="VL1-7w-zas" customClass="ColorSampleCollectionViewCell" customModule="CollectionViewSample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="TSw-52-eY5">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gb-ts-Cxf">
+                                                    <rect key="frame" x="43" y="53.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fud-pM-Z6G" userLabel="Name">
+                                                    <rect key="frame" x="43" y="99" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="fud-pM-Z6G" firstAttribute="top" secondItem="5gb-ts-Cxf" secondAttribute="bottom" constant="24.5" id="DcR-2e-h5d"/>
+                                                <constraint firstItem="5gb-ts-Cxf" firstAttribute="centerY" secondItem="TSw-52-eY5" secondAttribute="centerY" id="I1j-ps-tPw"/>
+                                                <constraint firstItem="5gb-ts-Cxf" firstAttribute="centerX" secondItem="TSw-52-eY5" secondAttribute="centerX" id="NTY-eB-Y2w"/>
+                                                <constraint firstItem="fud-pM-Z6G" firstAttribute="centerX" secondItem="TSw-52-eY5" secondAttribute="centerX" id="cwO-9O-WzX"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="label" destination="5gb-ts-Cxf" id="EzZ-gx-EZa"/>
+                                            <outlet property="name" destination="fud-pM-Z6G" id="bzH-ge-vv4"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ms5-Tb-edE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="kPk-C8-m1p" firstAttribute="top" secondItem="ms5-Tb-edE" secondAttribute="top" id="Ov9-fy-IS6"/>
+                            <constraint firstItem="ms5-Tb-edE" firstAttribute="trailing" secondItem="kPk-C8-m1p" secondAttribute="trailing" id="e1F-QJ-6rb"/>
+                            <constraint firstItem="kPk-C8-m1p" firstAttribute="leading" secondItem="ms5-Tb-edE" secondAttribute="leading" id="iK9-jy-lvp"/>
+                            <constraint firstItem="ms5-Tb-edE" firstAttribute="bottom" secondItem="kPk-C8-m1p" secondAttribute="bottom" id="oCB-Xh-GKH"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2re-HX-ZPr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
