BasicCollectionViewのレイアウト調整、完成

--- a/CollectionViewSample/BasicCollectionView/BasicCollectionView.storyboard
+++ b/CollectionViewSample/BasicCollectionView/BasicCollectionView.storyboard
@@ -34,20 +34,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C31-VV-bCP">
-                                                    <rect key="frame" x="43" y="54" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C31-VV-bCP">
+                                                    <rect key="frame" x="43.5" y="53.5" width="41.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="C31-VV-bCP" firstAttribute="centerX" secondItem="G7v-jP-8tw" secondAttribute="centerX" id="Xta-gE-hLf"/>
+                                                <constraint firstItem="C31-VV-bCP" firstAttribute="centerY" secondItem="G7v-jP-8tw" secondAttribute="centerY" id="voT-Nf-u9W"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="label" destination="C31-VV-bCP" id="rU4-IO-chE"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="TEP-Kl-S4X" id="Rhf-go-Pck"/>
+                                    <outlet property="delegate" destination="TEP-Kl-S4X" id="JeS-h7-JKB"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="KCK-lJ-98c"/>
@@ -65,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cWb-mU-ZKH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="214" y="129"/>
+            <point key="canvasLocation" x="213.04347826086959" y="128.57142857142856"/>
         </scene>
     </scenes>
     <resources>
