--- a/CollectionViewSample/Base.lproj/Main.storyboard
+++ b/CollectionViewSample/Base.lproj/Main.storyboard
@@ -26,17 +26,24 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftz-ic-huO">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="387"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="258"/>
                                                         <state key="normal" title="ColorSampleView"/>
                                                         <connections>
                                                             <segue destination="00A-GC-NkO" kind="show" id="oVz-Gb-J7c"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJf-NO-95x">
-                                                        <rect key="frame" x="0.0" y="387" width="414" height="387"/>
+                                                        <rect key="frame" x="0.0" y="258" width="414" height="258"/>
                                                         <state key="normal" title="BasicCollectionView"/>
                                                         <connections>
                                                             <segue destination="Dwt-4j-GvE" kind="show" id="s1U-Rb-ezj"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YiE-jR-ja1">
+                                                        <rect key="frame" x="0.0" y="516" width="414" height="258"/>
+                                                        <state key="normal" title="HFCollectionViewCell"/>
+                                                        <connections>
+                                                            <segue destination="U0U-Xz-3hB" kind="show" id="Ym5-gj-1eK"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -97,6 +104,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Mg-3v-dbe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1679" y="156"/>
+        </scene>
+        <!--HFCollectionView-->
+        <scene sceneID="SHf-v3-qwR">
+            <objects>
+                <viewControllerPlaceholder storyboardName="HFCollectionView" id="U0U-Xz-3hB" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="OlA-oV-Qmf"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nsC-H6-3xe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1678" y="268"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="93a-9h-uJt">
